<resources>
    <string name="app_name" translatable="false">Tarproject4</string>
    <string name="linear" translatable="false">Liner</string>
    <string name="constraint" translatable="false">constraint</string>
    <string name="coordinator" translatable="false">coordinator</string>
    <string name="frame" translatable="false">frame</string>
    <string name="relative" translatable="false">Relative</string>
    <string name="zero_Text" translatable="false">0</string>
    <string name="color_pool" translatable="false">Color Pool</string>
    <string name="off" translatable="false">off</string>
    <string name="redText" translatable="false">Red</string>
    <string name="orangeText" translatable="false">orange</string>
    <string name="yellowText">Yellow</string>
    <string name="greenText" translatable="false">Green</string>
    <string name="blueText">blue</string>
    <string name="indigoText">indigo</string>
    <string name="violetText">violet</string>
    <string name="textLif">Life is the aspect of existence that processes, acts, reacts, evaluates, and evolves through growth (reproduction and metabolism). The crucial difference between life and non-life (or non-living things) is that life uses energy for physical and conscious development. Life is anything that grows and eventually dies, i.e., ceases to proliferate and be cognizant. Can we say that viruses, for example, are cognizant? Yes, insofar as they react to stimuli; but they are alive essentially because they reproduce and grow. Computers are non-living because even though they can cognize, they do not develop biologically (grow), and cannot produce offspring. It is not cognition that determines life, then: it is rather proliferation and maturation towards a state of death; and death occurs only to living substances.</string>
    <string name="phoneD4p">24dp</string>
    <string name="google_voice">google Voice</string>
    <string name="_37494810110">+37494810110</string>
    <string name="_37494810109">+37494810109</string>
    <string name="phone">Phone</string>
    <string name="photoMy">PhotoLay</string>
    <string name="callButton">callButton</string>
    <string name="line9">line9</string>
    <string name="lineOne">lineOne</string>
    <string name="myMail">taronmartirosyan92@gmail.com</string>
    <string name="work">work</string>
    <string name="message">message</string>
    <string name="images">images</string>
    <string name="textGenerator">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ligula ipsum, porttitor rutrum aliquet ut, blandit vel diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi non auctor ipsum. Mauris a leo auctor, molestie felis ac, maximus libero. Donec pretium est at libero mollis, quis auctor mi pretium. Donec ultrices odio id sagittis euismod. Duis a velit vel nibh vestibulum rhoncus. Ut id orci sem. Fusce aliquam risus non luctus vulputate. Proin lobortis magna et lacus laoreet aliquet. Donec non congue nisi, eget accumsan nunc. Donec tempor eleifend congue. Vestibulum sit amet metus id magna faucibus porttitor. Fusce eros sem, efficitur eget libero luctus, finibus laoreet arcu. Quisque maximus orci quis metus porta gravida. Morbi id varius nulla, non pulvinar leo. Etiam sit amet ipsum mattis, porttitor enim et, condimentum nibh. Ut sit amet nulla posuere, rhoncus eros non, gravida lorem. Phasellus quis lobortis urna. Vestibulum sit amet convallis diam. Duis vitae odio id quam tempus fringilla. Quisque molestie ipsum eget neque bibendum, suscipit blandit magna aliquam. Quisque varius nibh sit amet tristique ornare. Nullam molestie aliquam lectus, ac pretium nisl interdum quis. Nam vulputate elit ac risus vestibulum dictum. Quisque tempor malesuada mauris eget porttitor. Sed orci justo, scelerisque id nunc nec, ornare rutrum nisl. Suspendisse malesuada faucibus tincidunt. Aenean sodales bibendum sem, eu dictum arcu commodo in. Vivamus eu orci sit amet nunc porttitor consectetur quis et augue. Sed commodo a orci a faucibus. Etiam gravida lacinia aliquam. Maecenas dictum augue ac mattis consequat. Phasellus id nisl felis. Phasellus ullamcorper urna fringilla nibh pellentesque sagittis. Phasellus vel bibendum tellus. Vestibulum rhoncus nulla sit amet cursus accumsan. Aliquam auctor velit ante, eget posuere magna interdum id. Aenean lobortis elementum velit a ultricies. Fusce eget egestas justo. Etiam venenatis erat varius aliquam dignissim. Cras laoreet volutpat dolor, ac iaculis urna dictum a. Vestibulum dictum posuere egestas. Donec ac ultricies diam, eget dignissim nunc. Proin metus ex, dignissim sed ex vel, tristique auctor sem. Fusce dapibus tortor eget enim tincidunt, eu mollis nunc accumsan. In id vulputate ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum nulla sem, ultricies sit amet convallis non, sodales sed lorem. Pellentesque eu nisl eget nisi pharetra aliquam. Donec non ornare risus. Ut blandit elementum tellus at egestas. Cras tristique mi quam, ac tincidunt felis fringilla ut.</string>
    <string name="title_activity_coordinator">CoordinatorActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="backImage">backImage</string>
    <string name="labelName">ColorPool</string>
</resources>
