<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".ColorPoolActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@color/colorBlack"
        android:orientation="horizontal"
        android:weightSum="3">

        <Switch
            android:id="@+id/switchId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/off"
            android:textColor="@color/switchTextColor" />

        <TextView
            android:id="@+id/poolTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/color_pool"
            android:textColor="@color/poolColor"
            android:textSize="@dimen/textSize" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearColorPoolId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redValueId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zero_Text"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/rgbColorsValue"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/greenValueId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zero_Text"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/rgbColorsValue" />

        <TextView
            android:id="@+id/blueValueId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zero_Text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/rgbColorsValue" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorRed">

        <SeekBar
            android:id="@+id/redId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorGreen">

        <SeekBar
            android:id="@+id/greenId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorBlue">

        <SeekBar
            android:id="@+id/blueId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorBlue" />

    </LinearLayout>

</LinearLayout>